argocd/envs/dev/aws-cp-example/aws-resources/vpc-cp-example.yaml
---
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: cp-example-private
spec:
  providerConfigRef:
    name: aws-upbound-pc
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    natGatewayIdRef:
      name: cp-example-nat
    region: us-east-1
    routeTableIdRef:
      name: cp-example-private
---
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: cp-example-public
spec:
  providerConfigRef:
    name: aws-upbound-pc
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    gatewayIdRef:
      name: cp-example-igw
    region: us-east-1
    routeTableIdRef:
      name: cp-example-public
